15677
The following Java file, Comment.java:

{code}
/**
 * /*
 */
class Comment { }
{code}


compiles with javac (version 1.6.0_21).

The Scala file, Comment.scala: 

{code}
/**
 * /*
 */
object Comment { }
{code}


fails to compile with scalac (version 2.9.0.r23024-b20100917144430)
with error message:
Comment.scala:2: error: unclosed comment
  /**
  ^
one error found


{code}

{code}
